# ChangeLog for x11-wm/evilwm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/evilwm/ChangeLog,v 1.50 2010/01/05 22:02:54 tcunha Exp $

  05 Jan 2010; Tiago Cunha <tcunha@gentoo.org> evilwm-1.0.1.ebuild:
  stable sparc, bug 285141

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> evilwm-1.0.1.ebuild:
  Stable on alpha, bug #285141

  29 Dec 2009; Joseph Jezak <josejx@gentoo.org> evilwm-1.0.1.ebuild:
  Marked ppc stable for bug #285141.

  28 Dec 2009; Markus Meier <maekke@gentoo.org> evilwm-1.0.1.ebuild:
  amd64/x86 stable, bug #285141

*evilwm-1.0.1 (23 Sep 2009)

  23 Sep 2009; Jeroen Roovers <jer@gentoo.org> +evilwm-1.0.1.ebuild:
  Version bump.

  18 Jul 2008; Alexis Ballier <aballier@gentoo.org> evilwm-1.0.0.ebuild:
  keyword ~x86-fbsd thanks to Davide Italiano <dav_it@gentoo.org>, bug
  #231713

  03 Feb 2008; Torsten Veller <tove@gentoo.org> -evilwm-0.99.25.ebuild:
  Cleaning. ppc-macos users will find it in prefix

  21 Dec 2007; nixnut <nixnut@gentoo.org> evilwm-1.0.0.ebuild:
  Stable on ppc wrt bug 202703

  19 Dec 2007; Raúl Porcel <armin76@gentoo.org> evilwm-1.0.0.ebuild:
  alpha/sparc/x86 stable wrt #202703

  18 Dec 2007; Doug Klima <cardoe@gentoo.org> evilwm-1.0.0.ebuild:
  amd64 stable wrt bug #202703

  22 Jul 2007; David Shakaryan <omp@gentoo.org> evilwm-0.99.25.ebuild:
  Remove virtual/x11 from dependencies.

*evilwm-1.0.0 (29 Jun 2007)

  29 Jun 2007; Torsten Veller <tove@gentoo.org> -evilwm-0.99.17.ebuild,
  +evilwm-1.0.0.ebuild:
  Version bump. Removed old ebuild

  18 Aug 2006; Luis Medinas <metalgod@gentoo.org> evilwm-0.99.25.ebuild:
  Stable on amd64. Bug #142610.

  09 Aug 2006; Thomas Cort <tcort@gentoo.org> evilwm-0.99.25.ebuild:
  Stable on alpha wrt Bug #142610.

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> evilwm-0.99.25.ebuild:
  Stable on ppc.

  04 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> evilwm-0.99.25.ebuild:
  Stable on sparc wrt #142610
