@@ -1,7 +1,7 @@
 AUX evilwm.desktop 182 RMD160 dab3a82cac2809d19b1ac05061fe622ec87e22b9 SHA1 3fb51a3657db60c06d458463302a6569c64f332b SHA256 2c033978db6abc4bc3aa99851e956ad0cd68d540202823af0839508ddb415816
-DIST evilwm-1.0.0.tar.gz 30048 RMD160 dc80217e10b621deb0ea745bcf740b1bf5847492 SHA1 a3fce3a06879d511ca6fed5f8b1d176b08a4bd26 SHA256 79d227f3af36eb621d6aa9b76d6270cd0bd31aeb5f9c1014723b2bb54fd37dc8
 DIST evilwm-1.0.1.tar.gz 31468 RMD160 da850746a3c2af462105b6353e8af900b336403c SHA1 35e380b059ac6030460a4bdc85cbde4e7f36146c SHA256 79640a68f6dd7e67a1767767aba486e192d7663ccb2588154d2419b47b9ec457
-EBUILD evilwm-1.0.0.ebuild 1425 RMD160 66745e35f47599d3b02dd3c04b8d62e20cc95b33 SHA1 63014c7e2c0fa9eae807772ad0632979e3217dff SHA256 7516f8ee6ea320a154504fb0340b723e40574ce68b46a11b51ffa482a234296e
+DIST evilwm-1.1.0pre8.tar.gz 40669 RMD160 5f5c8a1da658815e3cc4a27a2e6bf3ee5fdeb78b SHA1 1add8be881620db8260fa8870d64dab3558ce99c SHA256 b260f71ad7e235b1d5c6c3e153b59e5fdda6bc90c2deaf8f2683054272028f3f
 EBUILD evilwm-1.0.1.ebuild 1423 RMD160 81760403590316a79e5101ba9df9989d13bd9e30 SHA1 9970cd4124c63c7389bbd454b0c796773d5e31a9 SHA256 5ca05500f9d8aafab5061aac7fb1311001e0b6fdf1545055bd0b06d66825bf48
-MISC ChangeLog 6174 RMD160 60a173ef15138b4f79d543e71e970b8cbf54486a SHA1 3fdd067e29daa6fba35e373a54f212a9de8c7209 SHA256 940b3e5b2b279428f1e2cae0881e36def47459f3d4a0d7264331c095dea52924
+EBUILD evilwm-1.1.0_pre8.ebuild 1125 RMD160 0d2c68082f663d2360b450fcccba98d0e9b5eaf8 SHA1 00b92cbd85111e477d4c79609618e60068fa237b SHA256 479f8316bed36acf1ca84f0ebf570da972b97658abc0ca0507718a7028e87a93
+MISC ChangeLog 6485 RMD160 879c61ff9b078d2bbd59c904e45b5fb91ac412fa SHA1 ec3435b1c8824d69afa4aa8cee105a99a398badc SHA256 e5787ad235bf6e55ae0bd62003c95b13a2fd2c935a9c33cdf02ccf0b6d655774
 MISC metadata.xml 360 RMD160 b5ebb7c354adb9b7e7ce3e110835f8f08bc0af24 SHA1 71a3e8d535e0cb2bfc44b370dbd5785c683e6e54 SHA256 634576adf481fa9e17e5b0ec600305539a6405bc8329d376fabfa28573b3d4df
